# FAUST_FSM_TAPE

./: .gitignore  CLAUDE.md  README.md
context/: FSM_Tape_Post.dsp  FSM_Tape_Pre.dsp
docs/: CURRENT_STATUS.md  FSM-PHL-SRD-BIAS-OSC.md
docs/Hysteresis_Models/: Working Hysteresis Models, Unit Scaling, FAUST Implementation, and Bias Integration WORD.md
faust/: ja_lut_common.lib  ja_streaming_bias_proto.dsp  jahysteresis.lib
faust/bugfix/: README.md  ja_lut_k28.lib  ja_streaming_bias_proto_for_lib.dsp  ja_streaming_bias_proto_lib.dsp  ja_streaming_bias_proto_old.dsp  test_flat.dsp  test_nested_env.dsp  test_nested_with.dsp
faust/dev/: ja_lut_k121.lib  ja_lut_k187.lib  ja_lut_k2101.lib  ja_lut_k45.lib  ja_lut_k495.lib  ja_lut_k63.lib
faust/test/: TestOD.cpp  ja_lut_k1045.lib  ja_lut_k253.lib  ja_lut_k99.lib  ja_streaming_bias_proto_od.dsp  test_full_flat.dsp  test_full_nested_env.dsp  test_full_nested_with.dsp
juce_plugin/: .gitignore  CMakeLists.txt  README.md
juce_plugin/Source/: JAHysteresisScheduler.cpp  JAHysteresisScheduler.h  PluginProcessor.cpp  PluginProcessor.h
